# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Id$

  31 Oct 2003; Daniel Robbins <drobbins@gentoo.org> emerge: Should no longer
  spit out wacky "!!! no match found" warnings when auto-cleaning.
  
  30 Oct 2003; Daniel Robbins <drobbins@gentoo.org> portage.py: Only run
  depscan.sh if it exists on disk. This allows Portage to run inside a stage1
  where /sbin/depscan.sh doesn't exist.
  
  30 Oct 2003; Daniel Robbins <drobbins@gentoo.org> portage.py: Applied fix to
  allow multi-level "use? (   )" in SRC_URI, closing bug #16159.

*portage-2.0.49-r15/16 (21 Oct 2003): Fixes

  21 Oct 2003; Nicholas Jones <carpaski@gentoo.org> fix-db.py: was broken
  for python2.3 -- fixed now.
  
  21 Oct 2003; Nicholas Jones <carpaski@gentoo.org> portage.py: Added
  lockfiles to prelink md5 checks. Fixed caching bug where cache objects
  were passed back as pointers instead of copies. Added 'invalidentry'
  function to handle lockfiles -- It tests/deletes them using unlockfile.
  Added fix-db.py to the 'databases is broken' messages.

  21 Oct 2003; Nicholas Jones <carpaski@gentoo.org> ebuild.sh: added CDPATH
  to unset. SELinux fix for sandbox.
  
*portage-2.0.49-r13/14 (10 Oct 2003): Fixes

  10 Oct 2003; Nicholas Jones <carpaski@gentoo.org> *: Full adaptations
  for python2.3 implemented. Installation setup for /usr/lib/portage/pym
  instead of site-packages. Fix for Old-Instance unmerging which stopped
  happening due to changed path names. Binaries shouldn't merge under
  fetchonly.

*portage-2.0.49-r11/12 (08 Oct 2003): Internal Only.

*portage-2.0.49-r10 (08 Oct 2003): Fixes

  08 Oct 2003; Nicholas Jones <carpaski@gentoo.org> portage.py: Fixed a
  seemingly random traceback involving lockfiles -- Categories weren't
  being created before a lockfile was attempted in the category directory.
  More enhancements to aid migration to python-2.3. Added writemsg() as